fix: input wrong color outline

--- a/src/site/public/css/accounts/login.scss
+++ b/src/site/public/css/accounts/login.scss
@@ -19,6 +19,10 @@
   border-radius: 3px;
 }
 
+.login-form__input:focus {
+  outline-color: #01A9AA;
+}
+
 .login-form__submit {
   border-radius: 2px !important;
   height: 4rem;
