--- a/src/site/public/css/contact.scss
+++ b/src/site/public/css/contact.scss
@@ -19,6 +19,10 @@
   border-radius: 3px;
 }
 
+.contact-form__input:focus {
+  outline-color: #01A9AA;
+}
+
 .contact-form__submit {
   border-radius: 2px !important;
   height: 4rem;
